[package]
name = "gleisbau"
version = "0.7.1"
authors = [
    "Martin Lange <martin_lange_@gmx.net>",
    "Peer Sommerlund <peer.sommerlund@gmail.com>",
]
description = "Library to show clear git graphs arranged for your branching model"
repository = "https://github.com/git-bahn/gleisbau.git"
keywords = ["git", "graph"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.83.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[dependencies]
git2 = {version = "0.20", default-features = false, optional = false}
regex = {version = "1.7", default-features = false, optional = false, features = ["std"]}
serde = "1.0"
serde_derive = {version = "1.0", default-features = false, optional = false}
toml = "0.9"
itertools = "0.14"
svg = "0.18"
lazy_static = "1.4"
yansi = "1.0"
atty = "0.2"
crossterm = {version = "0.29", optional = false}
chrono = {version = "0.4", optional = false}
textwrap = {version = "0.16", default-features = false, optional = false, features = ["unicode-width"]}
